Many Style Fixes, Mobile Targeted, IPAD; Few Final additions today; I had a few more things I wanted to add to this push today before I went ahead and rolled it out, but I think I have cleaned up most if not all of the lingering items in the cart/checkout section of the site for mobile. I am sure there are a few things we can adjust better, and the IPAD layout re-uses the mobile landscape layout, as to save time. This is perfectly fine, but a IPAD specific layout would be nicer (but really just not worth the time at this point). I focused on trying to make sure the site was totally usable, all the way thru, on any mobile device. Also, I changed the way the Progress Bar works in the checkout, which is far more involved, and gives a much cleaner, sleeker look to the checkout, especially on mobile devices.
Former-commit-id: aba58b32ae6f1927b87148270064ac306c42bdcc

--- a/skin/frontend/default/rofcustom/css/base.css
+++ b/skin/frontend/default/rofcustom/css/base.css
@@ -62,6 +62,7 @@
         background: #FFF;
         padding-top: 15px !important;
         box-shadow: 0 0 20px #AAA;
+        overflow-x: hidden;
     }
 
     .container > div:after { content: "\00D\00A"; display: block; height: 0; clear: both; visibility: hidden; }
